--- a/Views/Booking/SelectService.cshtml
+++ b/Views/Booking/SelectService.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewBag.Title = "Select Service";
 
+    //Dictionary maps the decription to the service type
     var serviceDescriptions = new Dictionary<string, string>
-{
+    {
         { "ALS (Advanced Life Support)", "Ambulance staffed with paramedics and advanced medical equipment" },
         { "BLS (Basic Life Support)", "Standard medical transport with basic life support equipment and EMTs" },
         { "Patient Transport", "Basic equipment to move a patient from one location to another" },
@@ -20,6 +21,7 @@
 <p>Select the service that caters to your needs the best, and we will send our team to help you!</p>
 
 <div class="row">
+    <!-- Loops through the service types, and creates a card with the service type and its relevant description-->
     @foreach (var service in HomeworkAssignment1.Models.Services.serviceTypes)
     {
         <div class="col-md-4 mb-4">
@@ -27,6 +29,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@service</h5>
                     <p class="card-text">@serviceDescriptions[service]</p>
+                    <!-- Redirects to the booking form of the service type-->
                     <a href="@Url.Action("BookingForm", "Booking", new { serviceType = service })" class="btn btn-primary">Select</a>
                 </div>
             </div>
